# biips

./: .cproject  .gitignore  .project  AUTHORS  AUTHORS.txt  CMakeLists.txt  COPYING  COPYING.txt  COPYING.txt.IN  Description  Description.txt  Developers_Guide.md  Developers_Guide.wiki  Developers_Help.md  INSTALL.md  INSTALL.wiki  Journal.md  NOTICES.in  NOTICES.txt  NOTICES.txt.in  README.in  README.md  README.md.IN  README.md.in  README.wiki  Thanks  Thanks.txt  Todo.md  build_biips.bat  build_biips.sh  coding_rules.txt  git_repair_author.sh  install_macosx_vm.md  install_vm.md  install_win7_vm.md  matlab2Roxygen.sed  notes.txt  pense_bete.txt  reminder.txt  rename_biips.sh
BiipsBase/: .cproject  .project  CMakeLists.txt
BiipsBase/include/: BiipsBase.hpp
BiipsBase/src/: BiipsBase.cpp
BiipsCompiler/: .cproject  .project  CMakeLists.txt
BiipsCompiler/include/: Console.hpp  printParseTree.hpp
BiipsCompiler/src/: Console.cpp
BiipsCore/: .cproject  .project  CMakeLists.txt
BiipsCore/include/: BiipsCore.hpp  BiipsVersion.hpp  version.hpp
BiipsCore/src/: BiipsVersion.cpp  version.cpp
BiipsTestCompiler/: .cproject  .project  BiipsTestCompiler.cpp  BiipsTestCompiler.sh  CMakeLists.txt  biipstest.cfg  sandbox.cpp
BiipsTestCompiler/bench/: backward_smoother_hmm_1d.m  generate_state.m  hmm_1d_lin_gauss.a.cfg  hmm_1d_lin_gauss.b.cfg  hmm_1d_lin_gauss.c.cfg  hmm_1d_lin_gauss.cfg  hmm_1d_lin_gauss.d.cfg  hmm_1d_lin_gauss.e.cfg  hmm_1d_lin_gauss.f.cfg  hmm_1d_lin_gauss.g.cfg  hmm_1d_lin_gauss.h.cfg  hmm_1d_lin_gauss.i.cfg  hmm_1d_lin_gauss.j.cfg  hmm_1d_non_lin_gauss.a.cfg  hmm_1d_non_lin_gauss.b.cfg  hmm_1d_non_lin_gauss.c.cfg  hmm_1d_non_lin_gauss.cfg  hmm_1d_non_lin_gauss.d.cfg  hmm_1d_non_lin_gauss.e.cfg  hmm_1d_non_lin_gauss.f.cfg  hmm_1d_non_lin_gauss.g.cfg  hmm_1d_non_lin_gauss.h.cfg  hmm_1d_non_lin_gauss.i.cfg  hmm_1d_non_lin_gauss.j.cfg  hmm_4d_lin.cfg  run_bench.m  run_bench_all.m  run_kalman_filter_1D.m  run_particle_filter.m  stoch_kinetic.cfg
BiipsTestCompiler/data/: dirichlet_multinomial.bug  hmm_1d_lin.bug
BiipsTestCompiler/include/: Plot.hpp  TestIO.hpp  storeUnregistered.hpp  t_ParseTree.hpp
BiipsTestCompiler/model/: hmm_1d_lin_data.bug  hmm_1d_non_lin.bug  hmm_4d_lin.bug  switching_stoch_volatility.bug
BiipsTestCompiler/src/: Plot.cpp  TestIO.cpp  kolmogorov.cpp  storeUnregistered.cpp  t_ParseTree.cpp
RBiips/: .project  CMakeLists.txt  COPYING  DESCRIPTION  DESCRIPTION.in  NAMESPACE  RBiipsTest.R  RBiipsTest_non_lin.R  README.in  configure  configure.ac  configure.ac.IN  configure.ac.in  hmm_1d_lin.bug  hmm_1d_lin_data.bug  hmm_1d_non_lin.bug
RBiips/R/: CMakeLists.txt  RBiips-package.R  RBiips.R  biips-object.R  biips.object.R  biips_model.R  mcarray-object.R  mcmcarray-object.R  particles.R  pimh.R  pmmh.R  sensitivity.R  smc.R  smcarray-object.R  utils.R  zzz.R
RBiips/data/: CMakeLists.txt
RBiips/demo/: CMakeLists.txt  hmm_1d_nonlin.R  stoch_volatility_param.R
RBiips/man/: CMakeLists.txt  RBiips-package.Rd  SP500.Rd  particles.object.Rd
RBiips/src/: CMakeLists.txt  Makevars  Makevars.in  Makevars.win  Makevars.win.IN  Makevars.win.in  RBiips.cpp  RBiipsCommon.cpp  RBiipsCommon.h  RBiips_utils.cpp  RBiips_utils.h  RFunction.cpp  RFunction.h  Rostream.cpp  Rostream.h  weighted_statistics.cpp  wtd_stat.cpp
Rbiips/: CMakeLists.txt  COPYING  DESCRIPTION  DESCRIPTION.IN  NAMESPACE  NOTICES  README  Rbiips.Rproj  TODO.md  cleanup  configure  configure.ac  configure.ac.IN
Rbiips/R/: Rbiips-package.R  biips-object.R  biips_model.R  extend_bugs.R  mcmcarray-object.R  pimh.R  plot-methods.R  pmmh.R  sensitivity.R  smc.R  smcarray-object.R  utils.R
Rbiips/demo/: demo.R  demo.html  hmm.dot
Rbiips/inst/: CMakeLists.txt
Rbiips/src/: CMakeLists.txt  Makevars  Makevars.IN  Makevars.in  Makevars.win  Makevars.win.IN  RDistribution.cpp  RDistribution.h  RFunction.cpp  RFunction.h  Rbiips.cpp  Rbiips_utils.cpp  Rbiips_utils.h  Rostream.cpp  Rostream.h  wtd_stat.cpp
Rbiips/vignettes/: CMakeLists.txt  Rbiips_quick.Rmd
base/: .cproject  CMakeLists.txt
base/include/: BiipsBase.hpp
base/src/: BiipsBase.cpp
compiler/: .cproject  .project  CMakeLists.txt
compiler/include/: Console.hpp  printParseTree.hpp
compiler/src/: Console.cpp  printParseTree.cpp
core/: CMakeLists.txt  Doxyfile  biips_info  biips_info.IN  biips_info.in  biips_version.in
core/include/: BiipsConfig.hpp  BiipsConfig.hpp.IN  BiipsConfig.hpp.in  BiipsCore.hpp  BiipsVersion.hpp
core/src/: BiipsVersion.cpp
include/: BiipsConfig.hpp  CMakeLists.txt
include/base/: BiipsBase.hpp
include/compiler/: Console.hpp  printParseTree.hpp
include/core/: BiipsConfig.hpp  BiipsConfig.hpp.IN  BiipsCore.hpp  BiipsVersion.hpp
include/util/: DumpReader.hpp  KalmanFilter.hpp  TestIO.hpp  kolmogorov.hpp
include/win32/: unistd.h
matbiips/: CMakeLists.txt  Contents.m  Mostream.cpp  Mostream.h  biips_add_distribution.m  biips_add_function.m  biips_build_sampler.m  biips_clear.m  biips_density.m  biips_diagnosis.m  biips_model.m  biips_nodes.m  biips_pimh_init.m  biips_pimh_samples.m  biips_pimh_update.m  biips_pmmh_init.m  biips_pmmh_samples.m  biips_pmmh_update.m  biips_print_dot.m  biips_smc_samples.m  biips_smc_sensitivity.m  biips_summary.m  biips_table.m  biips_variable_names.m  cono.m  debilos.R  hmm_1d_lin.bug  inter_biips.cpp  inter_utils.cpp  inter_utils.h  isoctave.m  matbiips.mex  matbiips.mexa64  matbiips.mexw64
matbiips/demo/: CMakeLists.txt  dMN_dim.m  dMN_sample.m  demo.m  f_dim.m  f_eval.m  hmm.bug  matbiips_demo.m
matbiips/doc/: CMakeLists.txt  (+4 more)
pmmh/: CMakeLists.txt  bidon.cpp  data_jags.R  hmm_1d_lin.bug
rbiips/: .cproject  CMakeLists.txt  COPYING  DESCRIPTION  DESCRIPTION.IN  DESCRIPTION.in  NAMESPACE  NOTICES  NOTICES.IN  NOTICES.in  README  README.IN  README.in  cleanup  configure  configure.ac  configure.ac.IN  configure.ac.in  configure.win
src/: CMakeLists.txt
test/: .project  BiipsTest.sh  CMakeLists.txt  config.hpp  t_Hmm1D_mini.cpp
testcompiler/: .cproject  .project  BiipsTestCompiler.cpp  BiipsTestCompiler.sh  CMakeLists.txt
(+1864 files in other folders)
